--- a/section_Brief_introduction_to_machine__1.tex
+++ b/section_Brief_introduction_to_machine__1.tex
@@ -1,5 +1,5 @@
 
-\section{ Brief introduction to machine learning and supervised classification problems}
+\section{ Brief ovierview to machine learning and supervised classification problems}\label{section-introduction}
 
 Machine learning is a subfield of computer science with broad \textit{theoeretical} intersections with statistics and mathematical optimization. At present time it has a wide range of application. A non-exhausitve list of applicaitons include self-driving cars, spam detection systems, face and/or voice recognition, temperature prediction in weather, AI opponents in games, disease prediction in patients, stock pricing, etc. Examples of these machine learning programs are now widespread to the point where their use has direct impact on the lives of millions of people. Due to this, machine learning has \textit{practical} intersections with data and software engineering.
 
