--- a/section_Logistic_Regression_for_Classification__.tex
+++ b/section_Logistic_Regression_for_Classification__.tex
@@ -1,4 +1,4 @@
-\section{Logistic Regression for Classification}
+\section{Logistic Regression for Classification}\label{section-logisticRegression}
 
 This model is named as a \textit{regression} model but is actually used for \textit{classification} and this convention has been used in this way for historical reasons.
 
