--- a/section_Logistic_Regression_for_Classification__.tex
+++ b/section_Logistic_Regression_for_Classification__.tex
@@ -1,4 +1,4 @@
-\section{Logistic Regression for Classification}\label{section-logisticRegression}
+\section{Logistic Regression for Classification}
 
 This model is named as a \textit{regression} model but is actually used for \textit{classification} and this convention has been used in this way for historical reasons.
 
@@ -98,7 +98,7 @@ There are a number of different functionals $R(\cdot)$ used to impose conditions
  Each has its own advantages and the details exceed the nature of this work. As a summary, benefits are related to robustness of the solution, convexity of the minimization function, unique minimum and model parsimony. The former case is known as \textit{ Lasso} regularization and the latter is known as \textit{ridge} or \textit{Tikhonov} regularization. Other variants include the \textit{elastic-net} penalty which is a weighted average of the previous two norms, or the $l0$ norm, which is the number of non null components of $\theta$. 
 
 
- and taking a weighted average of two different penalizations. T
+ and taking a weighted average of two different penalizations. 
 
 Even though some regularization methods have closed-form solutions, in practice most of them are found by iterative optimization routines such as gradient descent.	
 
