--- a/Expect_calG_calN_calE_calL__.tex
+++ b/Expect_calG_calN_calE_calL__.tex
@@ -1,15 +1,5 @@
- 
-$\Expect$
+\section{Bias, Variance, Generalization and Model Complexity}\label{section-biasVariance}
 
-$\calG \calN \calE \calL$
-
-\section{Bias, Variance, Generalization and Model Complexity}
- 
- 
- \subsection{Hastie Tibshiranie Friedman}
- 
- \textbf{Generalization}
- 
  Given a problem setting, it is said that an algorithm's predictive power relies on its ability to correctly label samples on independent test data. Measuring and comparing this ability among models is done to select the best supervised estimator.  The best learner will be said to have the lowest \textit{predictive error}. It is common in the literature \cite{james-biasVarianceGeneral} to separate the sources for this error in two concepts: bias and variance. Controlling these errors is central to any supervised machine learning problem.
  
  Conceptually the first type of error arises to the accuracy of the model in labeling predictions correctly. Either by assigning the sample to its correct class in classification settings or by predicting correctly the sample's target value. It is lower when models learn on the underlying structures of the data. However, as models learn more from the data i.e. the training set, they lose the ability to extend this predictive accuracy to new samples because they \textit{overfit} on the samples available. This second type of error is commonly to as increase in variance.
