--- a/textbf_Overfitting_subsection_Brief_comment__.tex
+++ b/textbf_Overfitting_subsection_Brief_comment__.tex
@@ -1,9 +1,7 @@
 
-\textbf{Overfitting}: 
 
+\subsection{Brief comment on the consistency of the Training Error and the Vapnik–Chervonenkis (VC) Dimension} \label{section-VcDimension}
 
-\subsection{Brief comment on the consistency of the Training Error and the Vapnik–Chervonenkis (VC) Dimension}
-\textbf{Vapnik–Chervonenkis Dimension}
 \cite{vapnik-nature2013}
 \cite{cherkassky-learning2007}
 
