--- a/section_Tree_extension_to_Random__.tex
+++ b/section_Tree_extension_to_Random__.tex
@@ -1,4 +1,4 @@
-\section{Tree extension to Random Forests}
+\section{Tree extension to Random Forests}\label{section-randomForests}
 \textbf{L Breiman Paper}\cite{breiman-randomforests}
 
 Random Forests are a special type of classifier in which a set of weaker learners are used together to build a stronger classifier. The idea is to have \textit{Decision Trees} as week learners and to ensemble a group of trees together. 
