--- a/section_Gradient_Boosting_Variation_subsection__.tex
+++ b/section_Gradient_Boosting_Variation_subsection__.tex
@@ -1,4 +1,4 @@
-\section{Gradient Boosting Variation}
+\section{Gradient Boosting Variation}\label{section-boosting}
 
 \subsection{Boosting Trees    }
 
