--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -51,7 +51,7 @@
  year={2011}
 }
 
-@BOOK{breiman-cart84,
+@book{breiman-cart84,
   author        = {L. Breiman and J. Friedman and R. Olshen and C. Stone},
   title         = {{Classification and Regression Trees}},
   publisher     = {Wadsworth and Brooks},
@@ -62,14 +62,14 @@
 }
 
 
-@ARTICLE{breiman-statisticalmodeling,
+@article{breiman-statisticalmodeling,
     author = {Leo Breiman},
     title = {Statistical modeling: The two cultures},
     journal = {Statistical Science},
     year = {2001}
 }
 
-@Article{breiman-randomforests,
+@article{breiman-randomforests,
 author="Breiman, Leo",
 title="Random Forests",
 journal="Machine Learning",
@@ -167,7 +167,7 @@ url="http://dx.doi.org/10.1023/A:1010933404324"
 
 @article{tizzoni2014use,
   title = {{On the use of human mobility proxies for modeling epidemics}},
-  author = {Tizzoni, Michele and Bajardi, Paolo and Decuyper, Adeline and King, Guillaume Kon Kam and Schneider, Christian M and Blondel, Vincent and Smoreda, Zbigniew and Gonz{\'a}lez, Marta C and Colizza, Vittoria},
+  author = {Tizzoni, Michele and Bajardi, Paolo and Decuyper, Adeline and King, Guillaume Kon Kam and Schneider, Christian M and Blondel,             Vincent and Smoreda, Zbigniew and Gonz{\'a}lez, Marta C and Colizza, Vittoria},
   journal = {PLoS Comput Biol},
   volume = {10},
   number = {7},
@@ -197,7 +197,6 @@ url="http://dx.doi.org/10.1023/A:1010933404324"
   url = {http://www.who.int/mediacentre/factsheets/fs340/en/},
   urldate = {2016-05-09},
 }
-
 
 
 @misc{plan_nacional_chagas,
@@ -247,7 +246,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 }
 
 @book{vapnik-nature2013,
-  title={The Nature of Statistical Learning Theory},
+  title={{The Nature of Statistical Learning Theory}},
   author={Vapnik, V.},
   isbn={9781475732641},
   lccn={95024205},
@@ -268,11 +267,23 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 
 @article{bengio-unbiasedCvEstimator,
   author    = {Yoshua Bengio and Yves Grandvalet},
-  title     = {No Unbiased Estimator of the Variance of K-Fold Cross-Validation},
+  title     = {{No Unbiased Estimator of the Variance of K-Fold Cross-Validation}},
   journal   = {Journal of Machine Learning Research},
   volume    = {5},
   pages     = {1089--1105},
   year      = {2004},
   url       = {http://www.jmlr.org/papers/volume5/grandvalet04a/grandvalet04a.pdf},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/jmlr/BengioG04},
+}
+
+
+@article{Schapire-adaBoost,
+  author =       {Freund, Yoav and Schapire, Robert E.},
+  title =        {{Experiments with a New Boosting Algorithm}},
+  booktitle =    {Proceedings of the Thirteenth International Conference on Machine Learning (ICML 1996)},
+  year =         {1996},
+  ISBN =         {1-55860-419-7},
+  editor =    {Saitta, Lorenza},
+  publisher = {Morgan Kaufmann},
+  pages =     {148-156},
 }
