--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -277,7 +277,7 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
 }
 
 
-@article{Schapire-adaBoost,
+@article{schapire-adaBoost,
   author =       {Freund, Yoav and Schapire, Robert E.},
   title =        {{Experiments with a New Boosting Algorithm}},
   booktitle =    {Proceedings of the Thirteenth International Conference on Machine Learning (ICML 1996)},
